--- a/src/pages/valley2/vvday4.astro
+++ b/src/pages/valley2/vvday4.astro
@@ -14,39 +14,52 @@ import Layout from '../../components/Layout.astro';
         </h2>
       </div>
 <h3>Ride Summary</h3>
-Distance:
+Distance: 85 mi
 <br>
-Climbing:
+Climbing: 968 feet
 <br>
-Descending:
+Descending: similar
 <br>
-Difficulty:
+Difficulty: medium
 <br>
-<a href=>Link to workout in Strava</a>
-<hr>
-<a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
+<a href="https://www.strava.com/activities/16410157607">Link to workout in Strava</a>
 <hr>
 <p>
-Slept heavily in the hostel bed knowing it was a long ride today.  Was awake by 7 so got packed up and went for coffee, enjoying another Aztec Mocha from the nearby shop until Irene's cafe opened where I scarfed down some biscuits and gravy and chicken fried steak.  Remembered to grab leftover pizza from the fridge, then was rolling by 9am, a bit later than hoped but about when I expected.
+<a href="https://q42.me/trips/valley2/day4-bigolive.jpg"><img src="https://q42.me/trips/valley2/day4-bigolive-small.jpg"></a>
 <p>
-Headed directly east outta Fresno - probably 15 miles of just going east, first on olive and then on Belmont street.  Belmont street's bike lane persisted long past civilization!  But also, it was nicer riding the unknown, urban adjacent route on a Sunday while traffic is light and unhurried.
+<i>The second largest olive in California, I think?  In the parking lot of the hotel I stayed at.  First biggest is on a roadside close to Redding, found when I was riding around up there!</i>
 <p>
-Had been eyeing the citrus lining the highway but didn't want to trespass to pick any and the stuff on the ground did not look good.  But then I found a u-pick! Tangerine Lady told me just to take whatever I wanted for free, and showed me how to use her loaned scissors to grab the best ones hiding inside the trees.  Yay for hyperlocal friendly fruit!
+Slept heavily in the hostel bed knowing it was a long ride today - I was planning on another hundred miler for some reason (it turned out to be a merciful 15 less).  Was awake by 7 so got packed up and went for coffee, enjoying another Aztec Mocha from the nearby opens-at-7 shop, until Irene's cafe opened at 8.  There I scarfed down some biscuits and gravy and chicken fried steak.  Despite having a dear friend Irene, the cafe of the same name was pretty forgettable, but I did get fueled up at least.  Even remembered to grab leftover pizza from the fridge on my way out, then was rolling by 9am, a bit later than hoped, but honestly, about when I expected.
+<p>
+<a href="https://q42.me/trips/valley2/day4-weirdroad.jpg"><img src="https://q42.me/trips/valley2/day4-weirdroad-small.jpg"></a>
+<p>
+Headed directly due east outta Fresno - probably 15 miles of just going east, first on Olive, and then on Belmont street.  Belmont street's bike lane persisted long past civilization - we were really out in the boonies by the time I turned, even though the bike lane kept going for a bit beyond where I needed it!  But also, bike lane or not, it was nicer riding the unknown, urban adjacent route on a Sunday while traffic is light and unhurried.
+<p>
+I had been eyeing the citrus lining the highway for the whole trip, but didn't want to trespass to pick any.  Some was clearly unripe, and the stuff on the ground looked pretty spoilt.  But then I came across an open u-pick orchard! Tangerine Lady was super duper friendly, told me just to take whatever I wanted for free ("and don't forget to stop by on your way back and get more!!"). She even showed me how to use her loaned scissors to grab the best ones hiding inside the trees.  Yay for hyperlocal and rather friendly fruit!  It was quite tasty.  I hate gardening, but I do love eating fresh produce...
 <p> 
-I think a lot about numbers while I ride.  Since I'm riding through field after farm field (though the foothills are more open range ranches once the elevation starts to pick up, I am still riding almost entirely to the west of the elevation).  But seeing orchards planted in a perfect grid, or a field furrowed every 2 feet for miles makes me think about big numbers - Thousands of plants per orchard, sometimes more than 100k in just a single plot of land.  And all the irrigation that has allowed this specialized growth.  Wonder what it will look like a couple hundred years after we're gone?  But also what an industry - this area grows year round and the crops are harvested at different times...civilization can be pretty clever in adapting with nature.  Grapes are just done; citrus is just starting, olives and nuts yet to come?
-
+<a href="https://q42.me/trips/valley2/day4-littlebig.jpg"><img src="https://q42.me/trips/valley2/day4-littlebig-small.jpg"></a>
 <p>
-Into Fresno, the foothills were barely on the horizon, but today we came right up to them and kissed them.  I like these little hills a lot better than the flat farmland, more interesting to just stare into for sure.
+<i>I wonder if these folks like railroads...</i>
 <p>
-Had lunch in Reedley and while still under the spell of a lunch milkshake, I lost my way and while stopping to consult the map, I tipped over.  My shoe stayed attached to the bike for quite awhile even after I removed my foot from it which was a fun challenge while laying on the sidewalk pinned underneath it.  But:  I did not hurt myself, and the bike tried to call for help (my bike computer notices falls and sends Lassie to get help if there is cell signal, supposedly.  Never tested it so far!)  Added a missing screw back to the shoe and was back to riding soon enough.
+I think a lot about numbers while I ride.  What percentage of complete I am (more often near the beginning than the end on this one, for some reason - like "ugh I'm not even 10% done yet!" rather than "90% complete!" seems to be what my mind focuses on), or how non-dense the civilization is out in the farmland (guessing <1 human per square mile in many cases!).  I'm riding through field after farm field - though the foothills are more open range ranches once the elevation starts to pick up, I am still riding almost entirely to the west of the elevation).  Seeing orchards planted in a perfect grid, or a field furrowed every 2 feet for miles and miles makes me think about big numbers: Thousands of plants per orchard, sometimes more than 100k in just a single plot of land (it was rare for there not to be roads at a minimum of every mile.  Sometimes every half or quarter or 1/5th of a mile, though, during this journey).  And then thinking about all the irrigation and the bazillions of gallons of redirected water that has allowed this specialized growth - IN THE DESERT NONETHELESS!  Wonder what it will look like a couple hundred years after we're gone?  Guessing it will return to desert once we stop maintaining the dams and canals.  But also: what an industry! This area grows year round (well maybe not in summer?  But definitely in winter!) and the crops are harvested at different times...civilization can be pretty clever in adapting with nature.  Now: grapes are just finishing; citrus is just starting to be harvestable; olives and nuts yet to come?
 <p>
-The next 40 miles or so kinda ran together...lots of road 26 and ave 328 for many many miles.  Occasional gas stations and just miles of farm and ranchland.
-<p> 
-Stopped and ate my leftover pizza at some point.  It no longer tasted very good but it did power me into town.
+When I was riding into Fresno, the foothills were barely on the horizon, but today we came right up to them and kissed them.  I like these little hills a lot better than the flat farmland, more interesting to just stare into for hours, for sure.
 <p>
-Hit a surprise climb at mile 80 when I was already pretty tuckered out.  But then I was rewarded with sunset atop the ridge!
+<a href="https://q42.me/trips/valley2/day4-reedley.jpg"><img src="https://q42.me/trips/valley2/day4-reedley-small.jpg"></a>
 <p>
-Biked into Linsday in the deepening dusk, found my hotel and a meal, and slept.  Shorter day next but may not have cell signal at the end so you may next hear from me in Bakersfield!
+Had lunch in the small town of Reedley.  It felt like a company town - built by, owned by, and named after a corporation - but, as I read some historic markers I learned that it started out as the Reedley homestead which grew and grew and grew and grew (and diversified).  So maybe still something similar in some ways.  While still under the spell of a lunch milkshake, I wandered off route while rolling through town, and while slowing to consult the map on my bike computer, I just tipped over.  My shoe stayed attached to the bike for quite awhile even after I removed my foot from it - which was a fun challenge while laying on the sidewalk pinned underneath it.  But:  I did not hurt myself. Lori was pleased to hear that the bike tried to place a call for help (my bike computer notices falls and sends Lassie to get help if there is cell signal, supposedly.  Never actually tested letting it make the call so far, since I've only triggered it a couple times and was hurt neither of those, so didn't want emergency services summoned nor Lori alerted.)  Took some doing to remove the shoe, but once I got it off, I replaced a missing screw in the cleat that clips my shoes to my pedals, and was back to riding soon enough.
+<p>
+<a href="https://q42.me/trips/valley2/day4-bills.jpg"><img src="https://q42.me/trips/valley2/day4-bills-small.jpg"></a>
+<p>
+<i>an interesting attempt to avoid bill delivery</i>
+<p>
+The next 40 miles or so kinda ran together...lots of road 26 and ave 328 and similar for many many miles.  Occasional gas stations but mostly just miles of farm and ranchland.  Stopped and ate my leftover pizza at some point.  It no longer tasted very good but it did power me into town.
+<p>
+It was a surprise to hit a bit of a stiff climb at mile 80 when I was already pretty tuckered out, but then I was rewarded with sunset atop the ridge!
+<p>
+<a href="https://q42.me/trips/valley2/day4-sunset.jpg"><img src="https://q42.me/trips/valley2/day4-sunset-small.jpg"></a>
+<p>
+Biked into Linsday in the deepening dusk, found my hotel and a meal, and slept.  Shorter day tomorrow, huzzah!
 <p>
     </div>
 
