--- a/src/pages/valley2/vvday5.astro
+++ b/src/pages/valley2/vvday5.astro
@@ -23,18 +23,26 @@ Difficulty: fairly easy but felt tedious
 <br>
 <a href="https://www.strava.com/activities/16419244384">Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-More dog chases in the past 2 days than in the past year!  no successful ones (from the dog point of view).  
+<a href="https://q42.me/trips/valley2/day5-beyondagriculture.jpg"><img src="https://q42.me/trips/valley2/day5-beyondagriculture-small.jpg"></a>
 <p>
-Lollygagged for a fair while this morning knowing that today was shorter in miles and suspecting that there wouldn't be a ton to do out at the campground, which is 8ish miles out of town.  Then had second disappointing breakfast at Mcdonalds (first disappointing breakfast was toast and coffee at the hotel).  Snacked my way towards the last town of the day that was restaurant sized, Earlimart.  Ate Mcdonalds again there and discovered frozen coke (mmm) but also somehow ended up ordering 10 churros from a food cart across from mcdonalds and they were amazing and so that was dessert and dinner.
+More dog chases on rides in the past 2 days than I can recall experiencing in the past year (probably 4 or 5 of them)!  Fortunately for me, no successful ones (from the dog point of view, I mean).  
 <p>
-Got to the campground just before 4 to find out that the visitor center for the state park closed at 4...and supposedly so did the showers.  I opted for the shower which was unnecessary since the showers never closed but the visitor center sure did.  Still, this is the site of an old town and there are historic or recreation buildings all over with placards so I took ye olde self-guided tour by bike as I ate churros, after I showered.
-<p>Now I might go get tenty at 6pm just to mosquitoavoid?
+<a href="https://q42.me/trips/valley2/day5-foothills.jpg"><img src="https://q42.me/trips/valley2/day5-foothills-small.jpg"></a>
+<p>
+Lollygagged for a fair while this morning knowing that today was shorter in miles and suspecting that there wouldn't be a ton to do out at the campground, which is 8ish miles out of town - so, not planning on riding back into town after I get set up at the campground.  Had a second disappointing breakfast at Mcdonalds (first disappointing breakfast was toast and coffee at the hotel).  Snacked my way towards the last town of the day that was restaurant sized, called Earlimart.  There were 100 taquerias and a McDonalids, and for some reason I chose to eat Mcdonalds again, and discovered frozen coke (better than a coke slurpee since it didn't seem to turn into just ice by the end). On the way out, there was a food cart across the street, so thinking of dinner, I stopped to get all that it sold - literally 1 item on the menu:  churros.  Somehow ended up ordering 10 churros (the guy held up a ballpoint pen and said "this is how big they are man, you don't want just 2!"), and they were amazing and so that was dessert, and dinner.  I'm an adult and I can do that if I want!  No regrets.
+<p>
+<a href="https://q42.me/trips/valley2/day5-grapes.jpg"><img src="https://q42.me/trips/valley2/day5-grapes-small.jpg"></a>
+<p>
+<i>Just a handful of grapes...</i>
+<p>
+Got to the state park campground just before 4 to discover that the visitor center for the park (which was interesting and historical) closed at 4...and supposedly so did the showers!  In the limited time available to me, I opted for the shower which was unnecessary since the showers turned out never to close - but the visitor center sure did.  Still, this is the site of an old town and there are historic or re-created buildings scattered all over with placards explaining them and the life in the town, so I took ye olde self-guided tour by bike as I ate churros, after I showered.
+<p>
+<a href="https://q42.me/trips/valley2/day5-camp.jpg"><img src="https://q42.me/trips/valley2/day5-camp-small.jpg"></a>
+<p>
+Now I might go get tenty at 6pm just to mosquitoavoid?  (I think I was asleep by 8).
 <p>
     </div>
-
 </main>
 <center>You can email me:  gently at gmail.com</center>
 </Layout>
