--- a/src/pages/valley2/vvday6.astro
+++ b/src/pages/valley2/vvday6.astro
@@ -24,28 +24,47 @@ Difficulty: would-be unremarkable enough - but I was already tired when I starte
 <br>
 <a href="https://www.strava.com/activities/16430677270">Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-"You must be quite a traveller", she said through her rolled-down window as she approached.  It took a moment to register why she was saying it, but I was on a remote stretch of Wallace Road in the middle of nowhere surrounded by orchards and no traffic for miles, standing over my clearly-well-packed bicycle.  She didn't seem to have an agenda other than chatting up another human who happened to be in the middle of nowhere and was nice enough, mentioning the prettiness of the route into los angeles even if the people there were doing CRAZY THINGS the nature of which I didn't encourage her to expound on, and so she didn't.
+<a href="https://q42.me/trips/valley2/day6-GASWAR.jpg"><img src="https://q42.me/trips/day6-GASWAR-small.jpg"></a>
 <p>
-I awoke at the campground, cooked some oatmeal, packed up and rode 15 miles back the way I'd come, excepting that I lifted my bike and bags over a gate to skip 2 miles of highway riding, after scouting out that the dirt road that was blocked to car traffic went someplace useful to me, and it did.
+<i>I OPT OUT OF THE GAS WAR</i>
 <p>
-Stopped in Earlimart for a breakfast torta and soda, and then kept going south and mostly east until I arrived in Bakersfield midafternoon.
+"You must be quite a traveller", she said through her rolled-down window as she approached.  It took a moment to register what she was on about, but I was on a remote stretch of road-to-nowhere Wallace Road, far from any town or major road, surrounded by orchards and no traffic for miles, and I was standing over my clearly-well-packed bicycle.  She didn't seem to have an agenda other than chatting up another human who happened to be in the middle of nowhere and was nice enough, mentioning the prettiness of the route into Los Angeles - even if the people there were doing CRAZY THINGS the nature of which I didn't encourage her to expound on, and so she didn't.
 <p>
-I got to see even more agricultural action during the ride - the vineyards were alive with throngs of mostly hispanic workers picking, packing, packaging, and trucking the flats of grapes away from the fields.  One friendly group explained they were wine grapes in this vineyard, since I could see that they weren't packaged, just dumped in a truck.  And that they looked less round and more finger-shaped than the grocery store grapes.  Many of the grapes being harvested were wearing protective headgear (sunshades saran wrapped over the entire rows).  But also pomegranates, garlic, and more on show today!
+I awoke at the campground, cooked some oatmeal, packed up and rode 15 miles back the way I'd come, excepting that I lifted my bike and bags over a locked gate in the campground to skip 2 miles of highway riding (after scouting out that the dirt road that was blocked to car traffic went someplace useful to me - and it did!)
 <p>
-My butt started out the day hurting, so it was kinda a long slog through 70 miles to the end of this road.  But it was still enjoyable enough despite the discomfort, and I got to discover a milkshake with boba in it and that was a tasty discovery!
+<a href="https://q42.me/trips/valley2/day6-breakfasttorta.jpg"><img src="https://q42.me/trips/day6-breakfasttorta-small.jpg"></a>
+<p>
+Stopped in Earlimart for a breakfast torta - this was the small one! - and soda, and then kept going south and mostly east until I arrived in Bakersfield midafternoon.
+<p>
+<a href="https://q42.me/trips/valley2/day6-winegrapes.jpg"><img src="https://q42.me/trips/day6-winegrapes-small.jpg"></a>
+<p>
+I got to see even more agricultural action during the ride - the vineyards were alive with throngs of mostly Hispanic workers picking, packing, packaging, and trucking the flats of grapes away from the fields.  When I stopped to take the above picture, one friendly group explained they were wine grapes in this vineyard, since I could see that they weren't packaged as usual - just dumped in a truck.  And that they looked less round and more finger-shaped than the grocery store grapes.  Also: many of the grapes being harvested were wearing protective headgear (sunshades saran wrapped over the entire rows).  But also pomegranates, garlic, and more on show today!
+<p>
+<a href="https://q42.me/trips/valley2/day6-grapehat.jpg"><img src="https://q42.me/trips/day6-grapehat-small.jpg"></a>
+<p>
+My butt started out the day hurting, so it was kinda a long slog through 70 miles to the end of this road, what ended up being the last day of the tour (though I spent a couple days in Bakersfield checking out the museums and area).  But it was still enjoyable enough despite the discomfort, and I got to discover a milkshake with boba in it - and THAT was a TASTY discovery!
+<p>
+<a href="https://q42.me/trips/valley2/day6-elmo.jpg"><img src="https://q42.me/trips/day6-elmo-small.jpg"></a>
 <p>
 An assortment of funny or interesting moments:
 <ul>
 <li>There was a neighborhood in North Bakersfield with street names of big waterfalls, and the way I figured this out was seeing one called "Wilammette Falls Dr"
 <li>I spent a long time on ZERKER ROAD which was generally nice riding
 <li>I crossed the ELMO HIGHWAY, while on ZERKER ROAD
-<li>Some of these old roads were falling apart, but they were all paved at least twice...I guess other people use them but there were a lot that didn't seem to go anywhere
+<li>Some of these old roads were falling apart, but they were all paved at least twice...I guess other people use them, but there were a lot that didn't seem to go anywhere.  Great for someone like me!  Weird for someone to spend so much money to create them and maintain them (to various degrees).
 <li>Saw some working iron horses (oil wells pumping actively), first in a few years I think?
 </ul>
-Now to figure out how to get back to Portland...train from here doesn't do...baggage...at all?
+<p>
+<a href="https://q42.me/trips/valley2/day6-ahead.jpg"><img src="https://q42.me/trips/day6-ahead-small.jpg"></a>
+<p>
+<i>I am quite curious as to how the painted "AHEAD" managed to degrade the asphalt like that</i>
+<p>
+Now to figure out how to get back to Portland...train from here suddenly doesn't do...baggage...at all? (spoiler:  I eventually ignored the advice of the Amtrak ticket agents and put my bike on the train myself, and then it was fine and easy to transfer near Sacramento.)
+<p>
+<a href="https://q42.me/trips/valley2/day6-willamette.jpg"><img src="https://q42.me/trips/day6-willamette-small.jpg"></a>
+<p>
+<i>Maybe I can just take this road back? (Willamette Falls is about 20 miles from my house)</i>
 <p>
     </div>
 
