--- a/src/pages/valley2.astro
+++ b/src/pages/valley2.astro
@@ -26,6 +26,8 @@ import Layout from '../components/Layout.astro';
 <h3><a href="https://photos.app.goo.gl/kdARPcbmBMw98U7k8">Full photo gallery from this trip</a></h3>
 <br>
 <p>
+<a href="https://q42.me/trips/valley2/valley2-sinkingship.png"><img src="https://q42.me/trips/valley2/valley2-sinkingship-small.png"></a>
+<p>
 Late last year, I was getting a little cabin fevery during the rainy, cold and dark Portland winter, so I hunted a bit for "winter-recommended bike tours nearby" and found this gem: 
 <br>
 <h3><a href="https://ridewithgps.com/ambassador_routes/2086-great-central-valley-bicycle-route">The Great Cental Valley Bicycle Route</a></h3>
